--- a/css/the-big-picture.css
+++ b/css/the-big-picture.css
@@ -5,7 +5,7 @@
  */
 
 body {
-  background: url('http://placehold.it/1920x1080') no-repeat center center fixed;
+  background: url('http://rasita.nl/img/1.jpg') no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
